# sas2dbx

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: manual.md
docs/stories/: 0.1.story.md  0.2.story.md  0.3.story.md  0.4.story.md  1.1.story.md  2.1.story.md  3.1.story.md  3.2.story.md  3.3.story.md  4.1.story.md  5.1.story.md  5.2.story.md  5.3.story.md
knowledge/: manifest.yaml
knowledge/custom/: README.md  conventions.yaml  libnames.yaml  macros.yaml  schemas.yaml
sas2dbx/: __init__.py  cli.py
sas2dbx/analyze/: classifier.py  dependency.py  idempotency.py  parser.py
sas2dbx/document/: architecture.py  job_doc.py  prompts.py  visual.py
sas2dbx/evolve/: __init__.py  agent.py  applier.py  engine.py  gate.py  health.py  quarantine.py  unresolved.py
sas2dbx/generate/: notebook.py  reconciliation.py  report.py  workflow.py
sas2dbx/ingest/: reader.py  scanner.py
sas2dbx/inventory/: __init__.py  checker.py  extractor.py  gate.py  reporter.py
sas2dbx/knowledge/: __init__.py  global_catalog.py  manifest.py  store.py  validate.py
sas2dbx/models/: dependency_graph.py  migration_result.py  sas_ast.py
sas2dbx/transpile/: engine.py  state.py
sas2dbx/validate/: __init__.py  collector.py  config.py  deployer.py  executor.py  preflight.py  report.py  semantic_risk.py
sas2dbx/web/: __init__.py  app.py  log_buffer.py  storage.py  worker.py
sas2dbx_work/catalog/: global_patterns.json  health_snapshots.json
tests/: test_cli.py
tests/analyze/: test_classifier.py  test_dependency.py  test_parser.py
(+98 files in other folders)
