[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sas2dbx"
version = "0.1.0"
description = "SAS Query to Databricks Migrator — AI-first transpilation tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "anthropic>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
sas2dbx = "sas2dbx.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
